# retriever

./: .gitignore  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  AUTOMATION.md  CODEX.md  DEMO.md  DEVPOST.md  SECURITY.md
examples/demo/: profile.json
plugins/retriever/.codex-plugin/: plugin.json
plugins/retriever/assets/: README.md
plugins/retriever/scripts/: retriever.py
plugins/retriever/scripts/retriever_core/: __init__.py  dashboard.py  db.py  injection.py  profile.py  reports.py  schedule.py
plugins/retriever/skills/retriever-manage/: SKILL.md
plugins/retriever/skills/retriever-manage/agents/: openai.yaml
plugins/retriever/skills/retriever-onboard/: SKILL.md
plugins/retriever/skills/retriever-onboard/agents/: openai.yaml
plugins/retriever/skills/retriever-report/: SKILL.md
plugins/retriever/skills/retriever-report/agents/: openai.yaml
plugins/retriever/skills/retriever-retrieve/: SKILL.md
plugins/retriever/skills/retriever-retrieve/agents/: openai.yaml
plugins/retriever/skills/retriever-uninstall/: SKILL.md
plugins/retriever/skills/retriever-uninstall/agents/: openai.yaml
plugins/retriever/skills/retriever-welcome/: SKILL.md
plugins/retriever/skills/retriever-welcome/agents/: openai.yaml
tests/: test_retriever_core.py
